css/style_1024.css
body {
    padding: 0;
}

nav {
    position: fixed;
    text-align: right;
    padding: 110px 0;
    width: 240px;
    height: 100%;
    background-color: #611414;
}

header {
    position: fixed;
    height: 115px;
    width: 100%;
    margin-left: 260px;
    background: #dfdfd8 url(assets/header-bg.png) no-repeat left bottom;
    z-index: 10;
}

footer {
    position: fixed;
    bottom: 0;
    text-align: right;
    width: 207px;
    color: #d0dfd8;
}

#main {
    float: left;
    position: relative;
    padding: 115px 20px 0 20px;
    margin-left: 240px;
    max-width: 960px;
}

#respmenu {
    display: inline;
}

figure {
    width: 33.33%;
    box-shadow: 1px 2px 3px rgb(102, 102, 102);
}

figure.fig_half {
    width: 50%;
}

.gallery_article div {
    top:-100px;
    position: relative;
}

.gallery_article figure {
    width:auto;
}

.research_article {
    min-height: 250px;
}

.search_article ul {
    list-style-type: none;
    padding-left: 0;
    text-indent: 1em;
}

nav ul {
    margin-top: 0;
}

nav ul.menu li ul.acitem li {
    height: 28px;
}

nav ul.menu li ul.acitem li a {
    height: 24px;
    line-height: 18px;
    font-size: 75%;
}

nav ul.menu li ul.acitem li a:hover,
nav li.expand ul.acitem li.active a:link,
nav li.expand ul.acitem li.active a:visited {
    background: url(assets/nav-sub-selected.png) no-repeat center right;
}

nav ul.menu li ul.acitem li.inside a:hover,
nav li a:hover,
nav li.active a:link,
nav li.active a:visited,
nav li.selected a:link,
nav li.selected a:visited,
nav li.inside a:hover {
    background: url(assets/nav-selected.png) no-repeat center right;
}

nav li a:link,
nav li a:visited {
    color: #d0dfd8;
    font-size: 128.6%;
    text-decoration: none;
    padding: 8px 30px;
    display: block;
    min-height: 31px;
}

.addthis_toolbox {
    position: fixed;
    left: 40px;
    bottom: 1.75em;
}

